--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 dependencies = [
     "fastapi>=0.104.0",
     "uvicorn>=0.23.2",
+    "pyyaml>=6.0.1",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
